# kubefi

./: .gitignore
.github/workflows/: deployment.yml  rust.yml
kubefi-deployments/: .env  .gitignore  Cargo.toml  Makefile  README.md  build-image.sh
kubefi-deployments/conf/: kubefi.conf  nifi.conf  schema.json
kubefi-deployments/docker/: Dockerfile
kubefi-deployments/examples/: custom-logback-cm.yaml  my-nifi-deployment.yaml  nifi-deployment-1.yaml
kubefi-deployments/examples/tls/: create-keystore.sh  keystore.jks  keystorePasswd  truststore.jks  truststorePasswd
kubefi-deployments/ldap/: ldap-deployment.yaml  ldap-service.yaml
kubefi-deployments/manifests/: kubefi-deployments-operator.yaml  rbac.yaml
kubefi-deployments/src/: config.rs  controller.rs  crd.rs  event_handler.rs  handelbars_ext.rs  lib.rs  main.rs  operator_config.rs  template.rs  watcher.rs
kubefi-deployments/src/controller/: configmap.rs  mod.rs  service.rs  statefulset.rs
kubefi-deployments/templates/: configmap.yaml  ingress.yaml  nifi-configmap.yaml  nifi-headless-service.yaml  nifi-service.yaml  nifi-statefulset.yaml  service.yaml  zk-configmap.yaml  zk-headless-service.yaml  zk-service.yaml  zk-statefulset.yaml
kubefi-deployments/templates/configs/: authorizers.xml  bootstrap.conf  login-identity-providers.xml  nifi.properties
kubefi-pipelines/: build.sc
