[package]
name = "kubefi-deployments"
version = "0.1.0"
edition = "2018"

[dependencies]
handlebars = { version = "3.2.1", features = ["dir_source"]}
kube = "0.35.1"
kube-derive = "0.35.1"
k8s-openapi = { version = "0.8.0", default-features = false, features = ["v1_17"] }
futures = "0.3.5"
futures-util = "0.3.5"
serde = "*"
serde_derive = "*"
serde_json = "*"
tokio = { version = "0.2.21", features = ["full"] }
anyhow = "1.0.31"
either = "1.5.3"
thiserror = "1.0.19"
log = "*"
env_logger = "*"
schemars = "0.7.6"
dotenv = "*"