[package]
name = "kubefi-deployments"
version = "0.1.0"
edition = "2018"

[dependencies]
handlebars = { version = "3.2.1", features = ["dir_source"]}
kube = "0.38.0"
kube-derive = "0.38.0"
kube-runtime = "0.38.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_16"] }
futures = "0.3.5"
futures-util = "0.3.5"
serde = "1.0.114"
serde_derive = "*"
serde_json = "1.0.57"
serde_yaml = "0.8.13"
hocon = "0.3.4"
tokio = { version = "0.2.21", features = ["full"] }
anyhow = "1.0.32"
#either = "1.5.3"
log = "0.4.11"
env_logger = "0.7.1"
schemars = "0.7.6"
dotenv = "0.15.0"